@@ -3,11 +3,13 @@ vNEXT (in development)
  * Changed USER command to not send the server name, per modern standards
  * Added support for SASL authentication (with PLAIN mechanism)
  * Removed some unused test code
- * Message IDs and replies:
+ * Message extensions:
     * Added support for IRCv3 message tags v3.3
     * Exposed message IDs in MessageReceived and ActionReceived events
     * When sending a message you can now indicate what it is in reply to
+    * Added sendTagMessage() to send message tags without any content
     * The reply() utility automatically marks messages as a reply
+    * Added react() utility to send a reaction client tag
 
 v0.5.0
 
